--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     
     <footer>
         <p>
-            Site criado por <a href="https://gustavoguanabara.github.io">Gustavo Guanabara</a> para o CursoemVideo.
+            Site implantado por <a href="https://steniocsantos.github.io">Stenio Santos</a> para o CursoemVideo.
         </p>
     </footer>
             
