update link autor

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     
     <footer>
         <p>
-            Site implantado por <a href="https://steniocsantos.github.io">Stenio Santos</a> para o CursoemVideo.
+            Site implantado por <a href="https://github.com/steniocsantos">Stenio Santos</a> para o CursoemVideo.
         </p>
     </footer>
             
